--- a/Resources/administration/src/module/sw-order/component/sw-order-state-history-card/sw-order-state-history-card.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-history-card/sw-order-state-history-card.html.twig
@@ -6,20 +6,22 @@
         {% block sw_order_state_history_card_container %}
             <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="30px 30px">
                 {% block sw_order_state_history_card_transaction %}
-                    <sw-order-state-card-entry @state-selected="onTransactionStateSelected"
-                        :history="transactionHistory"
-                        :transitionOptions="transactionOptions"
-                        stateMachineName="order_transaction.state"
-                        :title="$tc('sw-order.stateCard.headlineTransactionState')">
+                    <sw-order-state-card-entry class="sw-order-state-history-card__payment-state"
+                            @state-selected="onTransactionStateSelected"
+                            :history="transactionHistory"
+                            :transitionOptions="transactionOptions"
+                            stateMachineName="order_transaction.state"
+                            :title="$tc('sw-order.stateCard.headlineTransactionState')">
                     </sw-order-state-card-entry>
                 {% endblock %}
 
                 {% block sw_order_state_history_card_order%}
-                    <sw-order-state-card-entry @state-selected="onOrderStateSelected"
-                        :history="orderHistory"
-                        :transitionOptions="orderOptions"
-                        stateMachineName="order.state"
-                        :title="$tc('sw-order.stateCard.headlineOrderState')">
+                    <sw-order-state-card-entry  class="sw-order-state-history-card__order-state"
+                            @state-selected="onOrderStateSelected"
+                            :history="orderHistory"
+                            :transitionOptions="orderOptions"
+                            stateMachineName="order.state"
+                            :title="$tc('sw-order.stateCard.headlineOrderState')">
                     </sw-order-state-card-entry>
                 {% endblock %}
             </sw-container>
