NEXT-2821 - Rename media component events

--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -83,7 +83,7 @@
                                         :item="suggestion"
                                         :isList="true"
                                         :showContextMenuButton="false"
-                                        @sw-media-item-clicked="mediaItemChanged(suggestion.id)">
+                                        @media-item-click="mediaItemChanged(suggestion.id)">
                                     </sw-media-media-item>
                                 {% endblock %}
                             </li>
