--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -72,7 +72,7 @@
                             :uploadTag="uploadTag"
                             @sw-media-upload-added="onUploadsAdded"
                             @sw-media-upload-finished="onUploadFinished"
-                            @sw-media-upload-failed="onUploadFailed">
+                            @media-upload-fail="onUploadFailed">
                         </sw-upload-store-listener>
                         <sw-media-library
                             class="sw-media-index__media-library"
