--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-delivery/sw-product-variants-delivery-media/sw-product-variants-delivery-media.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-delivery/sw-product-variants-delivery-media/sw-product-variants-delivery-media.html.twig
@@ -47,8 +47,8 @@
                                             :source="item.mediaId"
                                             :uploadTag="item.id"
                                             :defaultFolder="product.getEntityName()"
-                                            @sw-media-upload-remove-image="removeMedia(item)"
-                                            @selectionChange="setMedia">
+                                            @media-upload-remove-image="removeMedia(item)"
+                                            @selection-change="setMedia">
                                     </sw-media-compact-upload>
                                 {% endblock %}
                             </template>
