--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -269,8 +269,8 @@
             <sw-media-modal-delete
                 v-if="showModalDelete"
                 :itemsToDelete="[item]"
-                @sw-media-modal-delete-close="closeModalDelete"
-                @sw-media-modal-delete-items-deleted="deleteSelectedItems">
+                @media-delete-modal-close="closeModalDelete"
+                @media-delete-modal-items-delete="deleteSelectedItems">
             </sw-media-modal-delete>
         {% endblock %}
 
@@ -278,8 +278,8 @@
             <sw-media-modal-move
                 v-if="showModalMove"
                 :itemsToMove="[item]"
-                @sw-media-modal-move-close="closeModalMove"
-                @sw-media-modal-move-items-moved="onFolderMoved">
+                @media-move-modal-close="closeModalMove"
+                @media-move-modal-items-move="onFolderMoved">
             </sw-media-modal-move>
         {% endblock %}
 
