--- a/Resources/administration/src/app/component/form/sw-text-editor-toolbar/sw-text-editor-toolbar.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor-toolbar/sw-text-editor-toolbar.html.twig
@@ -4,12 +4,12 @@
             <div class="sw-text-editor-toolbar__item"
                  v-for="(button, index) in buttonConfig"
                  :key="index"
-                 v-on="button.children || button.type === 'link' ? { click: () => onToggleMenu(button) } : { click: () => handleButtonClick(button) }">
+                 v-on="button.children || button.type === 'link' ? { click: (event) => onToggleMenu(event, button) } : { click: () => handleButtonClick(button) }">
 
                 {% block sw_text_editor_toolbar_item_button %}
                     <template v-if="button.icon">
                         <div class="sw-text-editor-toolbar__item-button">
-                            <sw-icon :name="button.icon" size="16"></sw-icon>
+                            <sw-icon :name="button.icon" size="12"></sw-icon>
                             <sw-icon v-if="button.children" name="default-arrow-head-down" size="8"></sw-icon>
                         </div>
                     </template>
