NEXT-2718 - Add mailtypes to admin, to state machine states and disallow multiple mail templates of the same type for one sales channel

--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
@@ -1,5 +1,6 @@
 {% block sw_mail_header_footer_list_grid %}
-    <sw-card :isLoading="isLoading">
+    <sw-card :isLoading="isLoading"
+        :title="$tc('sw-mail-template.list.titleMailFooterList')">
         <sw-grid slot="grid"
                  :selectable="false"
                  :items="mailHeaderFooters"
