--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-list/sw-mail-template-list.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-list/sw-mail-template-list.html.twig
@@ -1,5 +1,6 @@
 {% block sw_mail_template_list_grid %}
-    <sw-card :isLoading="isLoading">
+    <sw-card :isLoading="isLoading"
+        :title="$tc('sw-mail-template.list.titleMailTemplateList')">
         <sw-grid slot="grid"
                  :selectable="false"
                  :items="mailTemplates"
