NEXT-2404 - Delete confirm box

--- a/Resources/administration/src/app/component/form/sw-select/sw-select.scss
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.scss
@@ -346,6 +346,10 @@ $sw-select-transition-result-icon: all ease-in-out .15s;
         .sw-select__selection-item-input {
             margin-bottom: 0;
         }
+
+        .sw-select__indicators {
+            top: 8px;
+        }
     }
 
     // Vue.js transitions
