--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -29,9 +29,9 @@
                              @focus="onFocus"
                              @keyup="onContentChange"
                              tabindex="-1"
-                             v-html="content">
+                             v-html="$sanitize(content)">
                         </div>
-                        <div v-if="placeholderVisible" class="sw-text-editor__content-placeholder" v-html="placeholder"></div>
+                        <div v-if="placeholderVisible" class="sw-text-editor__content-placeholder" v-html="$sanitize(placeholder)"></div>
                     </div>
                 {% endblock %}
 
