--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
@@ -47,7 +47,7 @@
                                                         :label="$tc('sw-plugin.list.columnChangelog')"
                                                         dataIndex="changelog">
                                             {% block sw_plugin_updates_list_grid_columns_changelog_label %}
-                                                <div v-html="item.changelog"></div>
+                                                <div v-html="$sanitize(item.changelog)"></div>
                                             {% endblock %}
                                         </sw-grid-column>
                                     {% endblock %}
