--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
@@ -83,7 +83,7 @@
                                                                 editable
                                                                 :label="$tc('sw-settings-tax.list.columnTaxRate')">
                                                     {% block sw_settings_tax_list_columns_short_tax_rate_label %}
-                                                        {{ item.taxRate }} <span v-html="$tc('sw-settings-tax.general.taxRateSymbol')"></span>
+                                                        {{ item.taxRate }} <span v-html="$sanitize($tc('sw-settings-tax.general.taxRateSymbol'))"></span>
                                                     {% endblock %}
 
                                                     {% block sw_settings_tax_list_columns_taxrate_editor %}
