--- a/Resources/administration/src/module/sw-settings-newsletter-receiver/page/sw-settings-newsletter-receiver-list/sw-settings-newsletter-receiver-list.twig
+++ b/Resources/administration/src/module/sw-settings-newsletter-receiver/page/sw-settings-newsletter-receiver-list/sw-settings-newsletter-receiver-list.twig
@@ -155,7 +155,7 @@
                             <template slot="header">{{ $tc('sw-settings-newsletter-receiver.general.tags') }}</template>
                             <template slot="content">
                                 {% block sw_settings_newsletter_receiver_list_sidebar_filter_sales_tags_select %}
-                                    <sw-entity-multi-select :collection="tagCollection" :localMode="true"></sw-entity-multi-select>
+                                    <sw-entity-multi-select entity="tag"></sw-entity-multi-select>
 
 {#                                    <sw-select multi id="tags" :store="tagStore" :associationStore="tagAssociationStore" @input="onChange"></sw-select>#}
                                 {% endblock %}
